--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,6 +64,8 @@
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.0",
     "react-dom": "^17.0.1",
+    "react-notifications": "^1.7.2",
+    "react-notifications-component": "^3.1.0",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
     "react-select": "^4.3.0",
