--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^8.2.0",
     "eslint": "^7.13.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-promise-router": "^3.0.3",
     "faker": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
