--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,14 +29,9 @@
     "dayjs": "^1.9.6",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "eslint": "^7.11.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^3.9.2",
     "eslint-webpack-plugin": "^2.1.0",
     "file-loader": "6.1.1",
@@ -50,8 +45,8 @@
     "jest-watch-typeahead": "0.6.1",
     "jwt-decode": "^3.1.2",
     "mini-css-extract-plugin": "0.11.3",
-    "mobx": "^6.0.4",
-    "mobx-react": "^7.0.5",
+    "mobx": "6.3.2",
+    "mobx-react": "7.2.0",
     "mobx-react-devtools": "^6.1.1",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "5.0.4",
@@ -61,7 +56,7 @@
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "5.0.2",
-    "react": "^17.0.1",
+    "react": "17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.0",
     "react-dom": "^17.0.1",
@@ -87,6 +82,8 @@
     "workbox-webpack-plugin": "5.1.4"
   },
   "scripts": {
+    "lint": "eslint src --ext .js",
+    "lint:fix": "npm run lint -- --fix",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
@@ -174,5 +171,13 @@
         }
       ]
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.27.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
