--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "mobx-react-devtools": "^6.1.1",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "5.0.4",
+    "plural-ru": "^2.0.2",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-loader": "3.0.0",
