--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,6 +64,7 @@
     "react-router-dom": "^5.2.0",
     "react-select": "^4.3.0",
     "react-youtube": "^7.13.1",
+    "redis": "^3.1.2",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "8.0.2",
