--- a/backend/package.json
+++ b/backend/package.json
@@ -23,11 +23,10 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "express-promise-router": "^3.0.3",
-    "faker": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^0.21.12",
+    "knex": "0.21.15",
     "knex-migrate": "^1.7.4",
-    "pg": "^8.0.3",
+    "pg": "8.5.1",
     "pg-promise": "^10.5.2",
     "postgres": "^1.0.2",
     "sqlite3": "^5.0.0"
