--- a/backend/package.json
+++ b/backend/package.json
@@ -33,8 +33,10 @@
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "0.21.15",
+    "node-fetch": "^2.6.1",
     "pg": "8.5.1",
     "pg-promise": "^10.5.2",
+    "pm2": "^5.1.0",
     "postgres": "^1.0.2",
     "redis": "^3.1.2",
     "sqlite3": "^5.0.0"
