--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "pm2": "pm2 start ./pm2/process.config.js",
-    "production": "pm2 start ./pm2/process.prod.config.js",
+    "fork": "pm2 start ./pm2/fork.config.js&&pm2 logs",
+    "cluster": "pm2 start ./pm2/cluster.config.js&&pm2 logs",
+    "production": "pm2 start ./pm2/production.config.js",
     "devstart": "nodemon server.js",
     "knex": "./node_modules/.bin/knex",
     "eslint": "eslint"
@@ -15,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/eslint-parser": "^7.12.1",
+    "@socket.io/redis-adapter": "^7.0.0",
     "babel-eslint": "^10.1.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
@@ -39,12 +41,13 @@
     "pm2": "^5.1.0",
     "postgres": "^1.0.2",
     "redis": "^3.1.2",
+    "socket.io": "^4.1.3",
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "husky": "^4.2.5",
-    "nodemon": "^2.0.6",
-    "knex-migrate": "^1.7.4"
+    "knex-migrate": "^1.7.4",
+    "nodemon": "^2.0.6"
   },
   "keywords": [],
   "description": ""
