--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "fork": "pm2 start ./pm2/fork.config.js&&pm2 logs",
     "cluster": "pm2 start ./pm2/cluster.config.js&&pm2 logs",
-    "production": "pm2 start ./pm2/production.config.js",
+    "production": "pm2 start ./pm2/production.config.js --env production",
     "devstart": "nodemon server.js",
     "knex": "./node_modules/.bin/knex",
     "eslint": "eslint"
