--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,10 +53,10 @@
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "5.0.2",
-    "react": "17.0.1",
+    "react": "16.8.0",
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.0",
-    "react-dom": "^17.0.1",
+    "react-dom": "^16.8.0",
     "react-dropzone": "^11.3.2",
     "react-notifications": "^1.7.2",
     "react-notifications-component": "^3.1.0",
@@ -176,6 +176,8 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "react-virtualized-auto-sizer": "^1.0.5",
+    "react-window": "^1.8.6"
   }
 }
