--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,14 @@
+ORIGIN="https://creators.emergent.su http://socket.test http://localhost:3000"
 APP_PORT_PART=800
 APP_PORT=8000
 APP_HOST=localhost
-REDIS_HOST=localhost
-REDIS_PORT=6379
-COOKIE_SECRET=qwegbshadn
-JWT_SECRET=qwknd&!njnqsd
-COMPRESSION=true
-ORIGIN
+COMPRESSION=false
+DB_URL=mongodb://localhost:27017/creators
+JWT_ACCESS_SECRET="saeqwsaqwknd&!njnqsd"
+JWT_REFRESH_SECRET="gfcvsqwknd&!njnqsd"
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT=587
+SMTP_USER="creators.emergent@gmail.com"
+SMTP_PASSWORD="+yvC@M{ty6,eG+.9"
+API_URL=http://localhost:8000
+CLIENT_URL=http://localhost:3000
