--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "fork": "pm2 start ./pm2/fork.config.js&&pm2 logs",
     "cluster": "pm2 start ./pm2/cluster.config.js&&pm2 logs",
     "production": "pm2 start ./pm2/production.config.js --env production",
@@ -18,10 +17,9 @@
     "@babel/eslint-parser": "^7.12.1",
     "@socket.io/redis-adapter": "^7.0.0",
     "babel-eslint": "^10.1.0",
-    "bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
-    "connect-redis": "^6.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
@@ -31,18 +29,23 @@
     "express-fileupload": "^1.2.1",
     "express-promise-router": "^3.0.3",
     "express-session": "^1.17.2",
+    "express-validator": "^6.12.1",
     "faker": "^5.0.0",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "0.21.15",
+    "mongodb": "^4.1.2",
+    "mongoose": "^6.0.7",
     "node-fetch": "^2.6.1",
+    "nodemailer": "^6.6.3",
     "pg": "8.5.1",
     "pg-promise": "^10.5.2",
     "pm2": "^5.1.0",
     "postgres": "^1.0.2",
     "redis": "^3.1.2",
     "socket.io": "^4.1.3",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.0",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "husky": "^4.2.5",
