--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,9 @@
     "fork": "pm2 start ./pm2/fork.config.js&&pm2 logs",
     "cluster": "pm2 start ./pm2/cluster.config.js&&pm2 logs",
     "production": "pm2 start ./pm2/production.config.js --env production",
-    "devstart": "nodemon server.js",
     "knex": "./node_modules/.bin/knex",
     "seed": "node ./seeds/mongo.seed.js",
+    "seed:production": "NODE_ENV=production node ./seeds/mongo.seed.js",
     "eslint": "eslint"
   },
   "author": "",
@@ -44,7 +44,7 @@
     "pm2": "^5.1.0",
     "postgres": "^1.0.2",
     "redis": "^3.1.2",
-    "socket.io": "^4.1.3",
+    "socket.io": "^4.2.0",
     "sqlite3": "^5.0.0",
     "uuid": "^3.4.0"
   },
