new featurec chat

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-ORIGIN="https://creators.emergent.su http://socket.test http://localhost:3000"
+#ORIGIN="https://creators.emergent.su"
 APP_PORT_PART=800
 APP_PORT=8000
 APP_HOST=localhost
@@ -10,5 +10,5 @@ SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=587
 SMTP_USER="creators.emergent@gmail.com"
 SMTP_PASSWORD="+yvC@M{ty6,eG+.9"
-API_URL=http://localhost:8000
-CLIENT_URL=http://localhost:3000
+#API_URL="https://creators.emergent.su"
+CLIENT_URL="http://localhost:3000"
