--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,3 @@
-REACT_APP_API_HOST=https://creators.emergent.su
+#REACT_APP_API_HOST=https://creators.emergent.su
+REACT_APP_API_HOST="http://socket.test"
+#REACT_APP_API_HOST=https://test.creators.emergent.su
