--- a/frontend/package.json
+++ b/frontend/package.json
@@ -84,7 +84,7 @@
     "lint": "eslint src --ext .js",
     "lint:fix": "npm run lint -- --fix",
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build": "rm -rf ./build && node scripts/build.js",
     "test": "node scripts/test.js",
     "eject": "react-scripts eject"
   },
