--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
 #ORIGIN="https://creators.emergent.su"
+#ORIGIN="https://test.creators.emergent.su"
 APP_PORT_PART=800
 APP_PORT=8000
 APP_HOST=localhost
@@ -12,3 +13,4 @@ SMTP_USER="creators.emergent@gmail.com"
 SMTP_PASSWORD="+yvC@M{ty6,eG+.9"
 #API_URL="https://creators.emergent.su"
 CLIENT_URL="http://localhost:3000"
+SUPER_LOGGER=1
