some structure changes

--- a/backend/.env
+++ b/backend/.env
@@ -12,5 +12,7 @@ SMTP_PORT=587
 SMTP_USER="creators.emergent@gmail.com"
 SMTP_PASSWORD="+yvC@M{ty6,eG+.9"
 #API_URL="https://creators.emergent.su"
+#CLIENT_URL="https://creators.emergent.su"
+#CLIENT_URL="https://test.creators.emergent.su"
 CLIENT_URL="http://localhost:3000"
 SUPER_LOGGER=1
