--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,6 @@
-#ORIGIN="https://creators.emergent.su"
-#ORIGIN="https://test.creators.emergent.su"
 APP_PORT_PART=800
 APP_PORT=8000
 APP_HOST=localhost
-COMPRESSION=false
 DB_URL=mongodb://localhost:27017/creators
 JWT_ACCESS_SECRET="saeqwsaqwknd&!njnqsd"
 JWT_REFRESH_SECRET="gfcvsqwknd&!njnqsd"
@@ -11,8 +8,9 @@ SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=587
 SMTP_USER="creators.emergent@gmail.com"
 SMTP_PASSWORD="+yvC@M{ty6,eG+.9"
-#API_URL="https://creators.emergent.su"
-#CLIENT_URL="https://creators.emergent.su"
-#CLIENT_URL="https://test.creators.emergent.su"
+#ORIGIN="http://socket.test"
+#API_URL="http://socket.test"
+#CLIENT_URL="http://socket.test"
 CLIENT_URL="http://localhost:3000"
 SUPER_LOGGER=1
+#COMPRESSION=1
