--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,9 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "npm-check": "^5.9.2"
+  },
   "scripts": {
     "lint": "eslint src --ext .js",
     "lint:fix": "npm run lint -- --fix",
@@ -95,24 +97,13 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.27.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "react-virtualized-auto-sizer": "^1.0.5",
-    "react-window": "^1.8.6",
+    "node-sass": "^6.0.1",
     "@babel/core": "7.12.3",
     "@babel/plugin-proposal-decorators": "^7.12.1",
     "@loadable/component": "^5.14.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
-    "@svgr/webpack": "5.4.0",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.1.2",
-    "@testing-library/user-event": "^12.2.2",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "axios": "^0.21.0",
@@ -124,27 +115,27 @@
     "bfj": "^7.0.2",
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "cloudinary-react": "^1.6.8",
     "css-loader": "4.3.0",
-    "dayjs": "^1.9.6",
+    "dayjs": "^1.10.7",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
+    "eslint": "^7.27.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^3.9.2",
     "eslint-webpack-plugin": "^2.1.0",
     "file-loader": "6.1.1",
     "fs-extra": "^9.0.1",
-    "google-libphonenumber": "^3.2.21",
+    "google-libphonenumber": "^3.2.25",
     "html-webpack-plugin": "4.5.0",
-    "identity-obj-proxy": "3.0.0",
-    "jwt-decode": "^3.1.2",
     "mini-css-extract-plugin": "0.11.3",
-    "mobx": "6.3.2",
-    "mobx-react": "7.2.0",
-    "mobx-react-devtools": "^6.1.1",
-    "node-sass": "^4.14.1",
+    "mobx": "^6.3.5",
+    "mobx-react": "^7.2.1",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "plural-ru": "^2.0.2",
     "pnp-webpack-plugin": "1.6.4",
@@ -158,23 +149,20 @@
     "react-dev-utils": "^11.0.0",
     "react-dom": "^16.8.0",
     "react-dropzone": "^11.3.2",
-    "react-notifications": "^1.7.2",
     "react-notifications-component": "^3.1.0",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
     "react-select": "^4.3.0",
     "react-youtube": "^7.13.1",
-    "redis": "^3.1.2",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
-    "sass-loader": "8.0.2",
-    "semver": "7.3.2",
+    "sass-loader": "^10.2.0",
+    "semver": "^7.3.5",
     "socket.io-client": "^4.2.0",
     "style-loader": "1.3.0",
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
     "url-loader": "4.1.1",
-    "web-vitals": "^0.2.4",
     "webpack": "4.44.2",
     "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "2.2.0",
