--- a/backend/.env
+++ b/backend/.env
@@ -2,8 +2,8 @@ APP_PORT_PART=800
 APP_PORT=8000
 APP_HOST=localhost
 DB_URL=mongodb://localhost:27017/creators
-JWT_ACCESS_SECRET="saeqwsaqwknd&!njnqsd"
-JWT_REFRESH_SECRET="gfcvsqwknd&!njnqsd"
+JWT_ACCESS_SECRET="secret"
+JWT_REFRESH_SECRET="secrett"
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=587
 SMTP_USER="creators.emergent@gmail.com"
