--- a/backend/.env.production
+++ b/backend/.env.production
@@ -1,14 +1,18 @@
-APP_PORT_PART=800
-APP_PORT=8000
 APP_HOST=localhost
-COMPRESSION=false
-JWT_ACCESS_SECRET="saeqwsaqwknd&!njnqsd"
-JWT_REFRESH_SECRET="gfcvsqwknd&!njnqsd"
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=587
 SMTP_USER="creators.emergent@gmail.com"
 SMTP_PASSWORD="+yvC@M{ty6,eG+.9"
 DB_URL=mongodb://localhost:27017/test_creators
+COMPRESSION=1
+APP_PORT_PART=800
+APP_PORT=8000
+#APP_PORT_PART=810
+#APP_PORT=8100
+#JWT_ACCESS_SECRET="saeqwsaqwknd&!njnqsd"
+#JWT_REFRESH_SECRET="gfcvsqwknd&!njnqsd"
+JWT_ACCESS_SECRET="@)(#*(km(IQK@+_(!"
+JWT_REFRESH_SECRET="KML@*()A_()!M/'q;,l,2"
 #ORIGIN="https://creators.emergent.su"
 ORIGIN="https://test.creators.emergent.su"
 #API_URL="https://creators.emergent.su"
