fix some changes

--- a/backend/.env.production
+++ b/backend/.env.production
@@ -15,5 +15,6 @@ JWT_ACCESS_SECRET="@)(#*(km(IQK@+_(!"
 JWT_REFRESH_SECRET="KML@*()A_()!M/'q;,l,2"
 #ORIGIN="https://creators.emergent.su"
 ORIGIN="https://test.creators.emergent.su"
+#ORIGIN="http://socket.test"
 #CLIENT_URL="https://creators.emergent.su"
 CLIENT_URL="https://test.creators.emergent.su"
