--- a/backend/.env.production
+++ b/backend/.env.production
@@ -2,7 +2,7 @@ APP_HOST=localhost
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=587
 SMTP_USER="creators.emergent@gmail.com"
-SMTP_PASSWORD="+yvC@M{ty6,eG+.9"
+SMTP_PASSWORD="fiikftntscvrhetb"
 DB_URL=mongodb://localhost:27017/test_creators
 COMPRESSION=1
 #APP_PORT_PART=800
